cmake_minimum_required(VERSION 3.8)
project(reference_node)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(pix_rover_driver_msgs REQUIRED)

add_executable(reference_node src/reference_node.cpp)

ament_target_dependencies(reference_node
  rclcpp
  sensor_msgs
  std_msgs
  pix_rover_driver_msgs
)

install(TARGETS
  reference_node
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
